[gd_scene load_steps=7 format=4 uid="uid://d1bwa56n7p6yc"]

[ext_resource type="Script" uid="uid://brylngalmlmw7" path="res://scripts/gameplay/Level.gd" id="1_i2pqh"]
[ext_resource type="PackedScene" uid="uid://deirkwq6fh73v" path="res://scenes/ui/HUD.tscn" id="2_gsbbr"]
[ext_resource type="Texture2D" uid="uid://ta0j5vdhfgpm" path="res://assets/Tilesets/CP_V1.0.4.png" id="2_qtqmo"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rd8yo"]
texture = ExtResource("2_qtqmo")
1:38/0 = 0
1:38/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:38/0 = 0
3:38/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:38/0 = 0
5:38/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:38/0 = 0
7:38/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:38/0 = 0
9:38/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:40/0 = 0
9:40/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:40/0 = 0
7:40/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:40/0 = 0
5:40/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:40/0 = 0
3:40/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:40/0 = 0
1:40/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:42/0 = 0
1:42/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:42/0 = 0
3:42/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:42/0 = 0
5:42/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
26:38/0 = 0
28:38/0 = 0
32:38/0 = 0
30:38/0 = 0
32:40/0 = 0
30:40/0 = 0
28:40/0 = 0
26:40/0 = 0
26:42/0 = 0
26:44/0 = 0
28:44/0 = 0
28:42/0 = 0
30:42/0 = 0
30:44/0 = 0
32:44/0 = 0
32:42/0 = 0
21:42/0 = 0

[sub_resource type="TileSet" id="TileSet_h7kxv"]
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 5
sources/0 = SubResource("TileSetAtlasSource_rd8yo")

[sub_resource type="Curve2D" id="Curve2D_a01y6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -432.485, 241, 0, 0, 0, 0, 1799.76, 240)
}
point_count = 2

[node name="Level01" type="Node2D"]
script = ExtResource("1_i2pqh")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(0, -152)
tile_map_data = PackedByteArray("AAALABUAAAAeACYAAAAMABUAAAAeACYAAAANABUAAAAeACYAAAAOABUAAAAeACYAAAAPABUAAAAeACYAAAAQABUAAAAeACYAAAARABUAAAAeACYAAAASABUAAAAeACYAAAATABUAAAAeACYAAAAUABUAAAAeACYAAAACABcAAAAFACYAAAACABgAAAADACYAAAACABkAAAAeACwAAAADABcAAAAFACYAAAADABgAAAADACYAAAADABkAAAAeACwAAAAEABcAAAAFACYAAAAEABgAAAADACYAAAAEABkAAAAeACwAAAAFABcAAAAFACYAAAAFABgAAAADACYAAAAFABkAAAAeACwAAAALABYAAAADACYAAAALABcAAAAFACYAAAALABgAAAADACYAAAALABkAAAAeACwAAAAMABYAAAADACYAAAAMABcAAAAFACYAAAAMABgAAAADACYAAAAMABkAAAAeACwAAAANABYAAAADACYAAAANABcAAAAFACYAAAANABgAAAADACYAAAANABkAAAAeACwAAAAOABYAAAADACYAAAAOABcAAAAFACYAAAAOABgAAAADACYAAAAOABkAAAAeACwAAAAPABYAAAADACYAAAAPABcAAAAFACYAAAAPABgAAAADACYAAAAPABkAAAAeACwAAAAQABYAAAADACYAAAAQABcAAAAFACYAAAAQABgAAAADACYAAAAQABkAAAAeACwAAAARABYAAAADACYAAAARABcAAAAFACYAAAARABgAAAADACYAAAARABkAAAAeACwAAAASABYAAAADACYAAAASABcAAAAFACYAAAASABgAAAADACYAAAASABkAAAAeACwAAAATABYAAAADACYAAAATABcAAAAFACYAAAATABgAAAADACYAAAATABkAAAAeACwAAAAUABYAAAADACYAAAAUABcAAAAFACYAAAAUABgAAAADACYAAAAUABkAAAAeACwAAAAAABUAAAAeACYAAAAAABYAAAADACYAAAAAABcAAAAFACYAAAAAABgAAAADACYAAAAAABkAAAAeACwAAAABABUAAAAeACYAAAABABYAAAADACYAAAABABcAAAAFACYAAAABABgAAAADACYAAAABABkAAAAeACwAAAACABUAAAAeACYAAAACABYAAAADACYAAAADABUAAAAeACYAAAADABYAAAADACYAAAAEABUAAAAeACYAAAAEABYAAAADACYAAAAFABUAAAAeACYAAAAFABYAAAADACYAAAAGABUAAAAeACYAAAAGABYAAAADACYAAAAGABcAAAAFACYAAAAGABgAAAADACYAAAAGABkAAAAeACwAAAAHABUAAAAeACYAAAAHABYAAAADACYAAAAHABcAAAAFACYAAAAHABgAAAADACYAAAAHABkAAAAeACwAAAAIABUAAAAeACYAAAAIABYAAAADACYAAAAIABcAAAAFACYAAAAIABgAAAADACYAAAAIABkAAAAeACwAAAAJABUAAAAeACYAAAAJABYAAAADACYAAAAJABcAAAAFACYAAAAJABgAAAADACYAAAAJABkAAAAeACwAAAAKABUAAAAeACYAAAAKABYAAAADACYAAAAKABcAAAAFACYAAAAKABgAAAADACYAAAAKABkAAAAeACwAAAAhABYAAAADACYAAAAhABcAAAAFACYAAAAhABgAAAADACYAAAAhABkAAAAeACwAAAAiABYAAAADACYAAAAiABcAAAAFACYAAAAiABgAAAADACYAAAAiABkAAAAeACwAAAAjABYAAAADACYAAAAjABcAAAAFACYAAAAjABgAAAADACYAAAAjABkAAAAeACwAAAAkABYAAAADACYAAAAkABcAAAAFACYAAAAkABgAAAADACYAAAAkABkAAAAeACwAAAAlABYAAAADACYAAAAlABcAAAAFACYAAAAlABgAAAADACYAAAAlABkAAAAeACwAAAAmABYAAAADACYAAAAmABcAAAAFACYAAAAnABYAAAADACYAAAAnABcAAAAFACYAAAAoABYAAAADACYAAAAoABcAAAAFACYAAAApABYAAAADACYAAAApABcAAAAFACYAAAAqABYAAAADACYAAAAqABcAAAAFACYAAAArABYAAAADACYAAAArABcAAAAFACYAAAAsABYAAAADACYAAAAsABcAAAAFACYAAAAtABYAAAADACYAAAAtABcAAAAFACYAAAAuABYAAAADACYAAAAuABcAAAAFACYAAAAvABYAAAADACYAAAAvABcAAAAFACYAAAAvABgAAAADACYAAAAvABkAAAAeACwAAAAwABYAAAADACYAAAAwABcAAAAFACYAAAAwABgAAAADACYAAAAwABkAAAAeACwAAAAxABYAAAADACYAAAAxABcAAAAFACYAAAAxABgAAAADACYAAAAxABkAAAAeACwAAAAyABYAAAADACYAAAAyABcAAAAFACYAAAAyABgAAAADACYAAAAyABkAAAAeACwAAAAzABYAAAADACYAAAAzABcAAAAFACYAAAAzABgAAAADACYAAAAzABkAAAAeACwAAAAmABgAAAADACYAAAAmABkAAAAeACwAAAAnABgAAAADACYAAAAnABkAAAAeACwAAAAoABgAAAADACYAAAAoABkAAAAeACwAAAApABgAAAADACYAAAApABkAAAAeACwAAAAqABgAAAADACYAAAAqABkAAAAeACwAAAArABgAAAADACYAAAArABkAAAAeACwAAAAsABgAAAADACYAAAAsABkAAAAeACwAAAAtABgAAAADACYAAAAtABkAAAAeACwAAAAuABgAAAADACYAAAAuABkAAAAeACwAAAAVABUAAAAeACYAAAAVABYAAAADACYAAAAVABcAAAAFACYAAAAVABgAAAADACYAAAAVABkAAAAeACwAAAAWABUAAAAeACYAAAAWABYAAAADACYAAAAWABcAAAAFACYAAAAWABgAAAADACYAAAAWABkAAAAeACwAAAAXABUAAAAeACYAAAAXABYAAAADACYAAAAXABcAAAAFACYAAAAXABgAAAADACYAAAAXABkAAAAeACwAAAAYABUAAAAeACYAAAAYABYAAAADACYAAAAYABcAAAAFACYAAAAYABgAAAADACYAAAAYABkAAAAeACwAAAAZABUAAAAeACYAAAAZABYAAAADACYAAAAZABcAAAAFACYAAAAZABgAAAADACYAAAAZABkAAAAeACwAAAAaABUAAAAeACYAAAAaABYAAAADACYAAAAaABcAAAAFACYAAAAaABgAAAADACYAAAAaABkAAAAeACwAAAAbABUAAAAeACYAAAAbABYAAAADACYAAAAbABcAAAAFACYAAAAbABgAAAADACYAAAAbABkAAAAeACwAAAAcABUAAAAeACYAAAAcABYAAAADACYAAAAcABcAAAAFACYAAAAcABgAAAADACYAAAAcABkAAAAeACwAAAAdABUAAAAeACYAAAAdABYAAAADACYAAAAdABcAAAAFACYAAAAdABgAAAADACYAAAAdABkAAAAeACwAAAAeABUAAAAeACYAAAAeABYAAAADACYAAAAeABcAAAAFACYAAAAeABgAAAADACYAAAAeABkAAAAeACwAAAAfABUAAAAeACYAAAAfABYAAAADACYAAAAfABcAAAAFACYAAAAfABgAAAADACYAAAAfABkAAAAeACwAAAAgABUAAAAeACYAAAAgABYAAAADACYAAAAgABcAAAAFACYAAAAgABgAAAADACYAAAAgABkAAAAeACwAAAAhABUAAAAeACYAAAAiABUAAAAeACYAAAAjABUAAAAeACYAAAAkABUAAAAeACYAAAAlABUAAAAeACYAAAAmABUAAAAeACYAAAAnABUAAAAeACYAAAAoABUAAAAeACYAAAApABUAAAAeACYAAAAqABUAAAAeACYAAAArABUAAAAeACYAAAAsABUAAAAeACYAAAAtABUAAAAeACYAAAAuABUAAAAeACYAAAAvABUAAAAeACYAAAAwABUAAAAeACYAAAAxABUAAAAeACYAAAAyABUAAAAeACYAAAAzABUAAAAeACYAAAA0ABUAAAAeACYAAAA0ABYAAAADACYAAAA0ABcAAAAFACYAAAA0ABgAAAADACYAAAA0ABkAAAAeACwAAAA1ABUAAAAeACYAAAA1ABYAAAADACYAAAA1ABcAAAAFACYAAAA1ABgAAAADACYAAAA1ABkAAAAeACwAAAA2ABUAAAAeACYAAAA2ABYAAAADACYAAAA2ABcAAAAFACYAAAA2ABgAAAADACYAAAA2ABkAAAAeACwAAAA3ABUAAAAeACYAAAA3ABYAAAADACYAAAA3ABcAAAAFACYAAAA3ABgAAAADACYAAAA3ABkAAAAeACwAAAA4ABUAAAAeACYAAAA4ABYAAAADACYAAAA4ABcAAAAFACYAAAA4ABgAAAADACYAAAA4ABkAAAAeACwAAAA5ABUAAAAeACYAAAA5ABYAAAADACYAAAA5ABcAAAAFACYAAAA5ABgAAAADACYAAAA5ABkAAAAeACwAAAA6ABUAAAAeACYAAAA6ABYAAAADACYAAAA6ABcAAAAFACYAAAA6ABgAAAADACYAAAA6ABkAAAAeACwAAAA7ABUAAAAeACYAAAA7ABYAAAADACYAAAA7ABcAAAAFACYAAAA7ABgAAAADACYAAAA7ABkAAAAeACwAAAA8ABUAAAAeACYAAAA8ABYAAAADACYAAAA8ABcAAAAFACYAAAA8ABgAAAADACYAAAA8ABkAAAAeACwAAAA9ABUAAAAeACYAAAA9ABYAAAADACYAAAA9ABcAAAAFACYAAAA9ABgAAAADACYAAAA9ABkAAAAeACwAAAA+ABUAAAAeACYAAAA+ABYAAAADACYAAAA+ABcAAAAFACYAAAA+ABgAAAADACYAAAA+ABkAAAAeACwAAAA/ABUAAAAeACYAAAA/ABYAAAADACYAAAA/ABcAAAAFACYAAAA/ABgAAAADACYAAAA/ABkAAAAeACwAAABAABUAAAAeACYAAABAABYAAAADACYAAABAABcAAAAFACYAAABAABgAAAADACYAAABAABkAAAAeACwAAABBABUAAAAeACYAAABBABYAAAADACYAAABBABcAAAAFACYAAABBABgAAAADACYAAABBABkAAAAeACwAAABCABUAAAAeACYAAABCABYAAAADACYAAABCABcAAAAFACYAAABCABgAAAADACYAAABCABkAAAAeACwAAABDABUAAAAeACYAAABDABYAAAADACYAAABDABcAAAAFACYAAABDABgAAAADACYAAABDABkAAAAeACwAAABEABUAAAAeACYAAABEABYAAAADACYAAABEABcAAAAFACYAAABEABgAAAADACYAAABEABkAAAAeACwAAABFABUAAAAeACYAAABFABYAAAADACYAAABFABcAAAAFACYAAABFABgAAAADACYAAABFABkAAAAeACwAAABGABUAAAAeACYAAABGABYAAAADACYAAABGABcAAAAFACYAAABGABgAAAADACYAAABGABkAAAAeACwAAABHABUAAAAeACYAAABHABYAAAADACYAAABHABcAAAAFACYAAABHABgAAAADACYAAABHABkAAAAeACwAAAA=")
tile_set = SubResource("TileSet_h7kxv")

[node name="EnemyPath" type="Path2D" parent="."]
position = Vector2(224, -16)
scale = Vector2(0.515625, 1)
curve = SubResource("Curve2D_a01y6")

[node name="SpawnPoint" type="Marker2D" parent="EnemyPath"]
position = Vector2(-434.424, 240)

[node name="TowersContainer" type="Node2D" parent="."]

[node name="HUD" parent="." instance=ExtResource("2_gsbbr")]
layer = -10
